<resources>
    <string name="app_name">jobsight</string>
    <string name="debug_mode">false</string>
    <string name="accesslocalstorage_txt_format">.txt</string>
    <string name="accesslocalstorage_png_format">.png</string>
    <string name="accesslocalstorage_mp4_format">.mp4</string>
    <string name="color_black">-16777216</string>
    <string name="color_white">-1</string>
    <string name="uri_with_coordinates">https://www.google.com/maps/?q=</string>
    <string name="text">Text</string>
    <string name="photo">Photo</string>
    <string name="sketch">Sketch</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="file">File</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="select">---Select---</string>
    <string name="jobname_nojobsexist">No Job exists</string>
    <string name="select_a_file">Select a myFile</string>
    <string name="cannot_edit_default_value">You cannot edit this value</string>
    <string name="cannot_delete_default_value">You cannot delete this value</string>
    <string name="value_has_not_changed">The value has not changed</string>
    <string name="cannot_be_blank">You must enter text</string>
    <string name="no_option_selected">You must select one option</string>
    <string name="parent_already_exists">The Group already exists</string>
    <string name="job_already_exists">The Job already exists</string>
    <string name="template_already_exists">The Template already exists</string>
    <string name="parent_create">Create Group</string>
    <string name="template_create">Create Template</string>
    <string name="parent_update">Update Group</string>
    <string name="child_update">Update Job</string>
    <string name="template_update">Update Template</string>
    <string name="parent_delete">Delete Group</string>
    <string name="child_delete">Delete Job</string>
    <string name="template_delete">Delete Template</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="enter_child_name">Enter Job Name</string>
    <string name="enter_template_name">Enter Template Name</string>
    <string name="parent_create_success">Group created</string>
    <string name="child_create_success">Job created</string>
    <string name="template_create_success">Template created</string>
    <string name="parent_create_fail">Group not created - error</string>
    <string name="child_create_fail">Job not created - error</string>
    <string name="template_create_fail">Template not created - error</string>
    <string name="parent_delete_question">Delete Group and all associated jobs?</string>
    <string name="child_delete_question">Delete Job?</string>
    <string name="template_delete_question">Delete Template?</string>
    <string name="delete_question_onclick">Delete button activated!</string>
    <string name="parent_update_success">Group updated</string>
    <string name="parent_update_fail">Group not updated - error</string>
    <string name="child_update_success">Job updated</string>
    <string name="child_update_fail">Job not updated - error</string>
    <string name="template_update_success">Template updated</string>
    <string name="template_update_fail">Template not updated - error</string>
    <string name="parent_delete_success">Group deleted</string>
    <string name="parent_delete_fail">Group not deleted - error</string>
    <string name="child_delete_success">Job deleted</string>
    <string name="child_delete_fail">Job not deleted - error</string>
    <string name="child_deletes_fail">Some/All Job(s) not deleted - error</string>
    <string name="template_delete_success">Template deleted</string>
    <string name="template_delete_fail">Template not deleted - error</string>
    <string name="ex_dir_not_readable">Cannot read external directory - error</string>
    <string name="ex_dir_not_writeable">Cannot write to external directory - error</string>
    <string name="ex_dir_not_creatable">Cannot create external directory - error</string>
    <string name="files_downloaded_success">Downloaded file(s)</string>
    <string name="files_downloaded_fail">Downloaded file(s) - error</string>
    <string name="text_cannotbeblank">You must enter text</string>
    <string name="text_saved_success">Text saved</string>
    <string name="text_saved_fail">Text not saved - error</string>
    <string name="photo_saved_success">Photo saved</string>
    <string name="photo_saved_fail">Photo not saved - error</string>
    <string name="location_saved_success">Location saved</string>
    <string name="location_saved_fail">Location not saved - error</string>
    <string name="sketch_saved_success">Sketch saved</string>
    <string name="sketch_saved_fail">Sketch not saved - error</string>
    <string name="audiorecording_saved_success">Sound Recording saved</string>
    <string name="audiorecording_saved_fail">Sound Recording not saved - error</string>
    <string name="videorecording_saved_success">Video Recording saved</string>
    <string name="videorecording_saved_fail">Video Recording not saved - error</string>
    <string name="file_saved_success">File saved</string>
    <string name="file_saved_fail">File not saved - error</string>
    <string name="activity_audiorecordinginput_btn_recording_start">Start recording</string>
    <string name="activity_audiorecordinginput_btn_recording_stop_and_save">Stop and save</string>
    <string name="activity_downloaddata_btn_download">No Job exists</string>
    <string name="activity_home_btn_job_new">New</string>
    <string name="activity_home_btn_job_open">Open</string>
    <string name="activity_home_btn_job_view">View</string>
    <string name="activity_home_btn_job_manage">Manage</string>
    <string name="activity_home_btn_job_download">Download</string>
    <string name="activity_home_btn_job_invoice">Invoice</string>
    <string name="activity_home_create_btn_add_text">Add Text</string>
    <string name="activity_home_create_btn_add_photo">Add Photo</string>
    <string name="activity_home_create_btn_add_current_loc">Add Current Location</string>
    <string name="activity_home_create_btn_add_sketch">Add Sketch</string>
    <string name="activity_home_create_btn_add_audio_recording">Add Sound Recording</string>
    <string name="activity_home_create_btn_add_video_recording">Add Video Recording</string>
    <string name="activity_home_create_btn_add_file">Add File</string>
    <string name="activity_manage_btn_create">Create</string>
    <string name="activity_manage_btn_update">Update</string>
    <string name="activity_manage_btn_delete">Delete</string>
    <string name="activity_settemplate_togbtn_add_text_on">Text capture on</string>
    <string name="activity_settemplate_togbtn_add_text_off">Text capture off</string>
    <string name="activity_settemplate_togbtn_add_photo_on">Photo capture on</string>
    <string name="activity_settemplate_togbtn_add_photo_off">Photo capture off</string>
    <string name="activity_settemplate_togbtn_add_current_loc_on">Current Location capture on</string>
    <string name="activity_settemplate_togbtn_add_current_loc_off">Current Location capture off</string>
    <string name="activity_settemplate_togbtn_add_signature_on">Signature capture on</string>
    <string name="activity_settemplate_togbtn_add_signature_off">Signature capture off</string>
    <string name="activity_settemplate_togbtn_add_voice_recording_on">Voice recording on</string>
    <string name="activity_settemplate_togbtn_add_voice_recording_off">Voice recording off</string>
    <string name="activity_settemplate_btn_job_create">Create job</string>
    <string name="activity_sketchinput_btn_signature_clear">Clear</string>
    <string name="activity_sketchinput_btn_signature_save">Save</string>
    <string name="activity_textinput_btn_text_clear">Clear</string>
    <string name="activity_textinput_btn_text_save">Save</string>
    <string name="activity_textinput_txt_text_capture">Enter text</string>
    <string name="activity_invoice_date_of_invoice">---Date Of Invoice---</string>
    <string name="activity_invoice_txt_supplier">---Supplier Details---</string>
    <string name="activity_invoice_txt_customer">---Customer Details---</string>
    <string name="activity_invoice_txt_other">---Other Details---</string>
    <string name="activity_invoice_btn_generate_invoice">Generate Invoce</string>
    <string name="popup_add_btn_child_open">Open Job</string>
    <string name="popup_create_autocom_parent_list">Enter Name of Group</string>
    <string name="popup_create_txt_child">Enter Name of Job</string>
    <string name="popup_create_btn_child_create">Create Job</string>
    <string name="popup_invoice_btn_select_customer_invoice">Create Invoice</string>
    <string name="popup_home_manage_crud_add_text_text_on">Text capture on</string>
    <string name="popup_home_manage_crud_add_text_text_off">Text capture off</string>
    <string name="popup_home_manage_crud_add_photo_photo_on">Photo recording on</string>
    <string name="popup_home_manage_crud_add_photo_photo_off">Photo recording off</string>
    <string name="popup_home_manage_crud_add_sketch_sketch_location_on">Current Location recording on</string>
    <string name="popup_home_manage_crud_add_sketch_sketch_location_off">Current Location recording off</string>
    <string name="popup_home_manage_crud_add_current_loc_current_location_on">Sketch capture on</string>
    <string name="popup_home_manage_crud_add_current_loc_current_location_off">Sketch capture off</string>
    <string name="popup_home_manage_crud_add_audio_recording_audio_recording_on">Audio recording on</string>
    <string name="popup_home_manage_crud_add_audio_recording_audio_recording_off">Audio recording off</string>
    <string name="popup_home_manage_crud_add_video_recording_video_recording_on">Video recording on</string>
    <string name="popup_home_manage_crud_add_video_recording_video_recording_off">Video recording off</string>
    <string name="popup_home_manage_crud_add_file_file_on">File capture on</string>
    <string name="popup_home_manage_crud_add_file_file_off">File capture off</string>
    <string name="popup_home_manage_crud_btn_save">Save</string>
    <string name="popup_locationinput_btn_create">Save</string>
    <string name="popup_manage_btn_parent_open">Manage Group</string>
    <string name="popup_manage_btn_child_open">Manage Job</string>
    <string name="popup_manage_btn_template_open">Manage Template</string>
    <string name="popup_manage_btn_customer_open">Manage Customer</string>
    <string name="recording_cancel">Cancel</string>
    <string name="recording_stopandsave">Stop Recording</string>
    <string name="recording_startrecording">Start Recording</string>
    <string name="text_parent">Manage Groups</string>
    <string name="text_child">Manage Jobs</string>
    <string name="text_template">Manage Templates</string>
    <string name="text_parent_saved">Group Saved</string>
    <string name="text_child_saved">Job Saved</string>
    <string name="text_template_saved">Template Saved</string>
    <string name="capture_location_error">Location is unknown at this time - try again in 10 seconds</string>
    <string name="no_gps_or_network_error">GPS and/or Network not available</string>
    <string name="device_permissions_error">Issue with device permissions</string>
</resources>