<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_home_manage_crud"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/popup_home_manage_crud_txt_title"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center" />

    <EditText
        android:id="@+id/popup_home_manage_crud_txt_name"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:inputType="textShortMessage"/>

    <ToggleButton
        android:id="@+id/popup_home_manage_crud_add_text"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:textOn="@string/popup_home_manage_crud_add_text_text_on"
        android:textOff="@string/popup_home_manage_crud_add_text_text_off" />

    <ToggleButton
        android:id="@+id/popup_home_manage_crud_add_photo"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:textOn="@string/popup_home_manage_crud_add_photo_photo_on"
        android:textOff="@string/popup_home_manage_crud_add_photo_photo_off" />

    <ToggleButton
        android:id="@+id/popup_home_manage_crud_add_sketch"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:textOn="@string/popup_home_manage_crud_add_sketch_sketch_location_on"
        android:textOff="@string/popup_home_manage_crud_add_sketch_sketch_location_off" />

    <ToggleButton
        android:id="@+id/popup_home_manage_crud_add_current_loc"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:textOn="@string/popup_home_manage_crud_add_current_loc_current_location_on"
        android:textOff="@string/popup_home_manage_crud_add_current_loc_current_location_off" />

    <ToggleButton
        android:id="@+id/popup_home_manage_crud_add_audio_recording"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:textOn="@string/popup_home_manage_crud_add_audio_recording_audio_recording_on"
        android:textOff="@string/popup_home_manage_crud_add_audio_recording_audio_recording_off" />

    <ToggleButton
        android:id="@+id/popup_home_manage_crud_add_video_recording"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:textOn="@string/popup_home_manage_crud_add_video_recording_video_recording_on"
        android:textOff="@string/popup_home_manage_crud_add_video_recording_video_recording_off" />

    <ToggleButton
        android:id="@+id/popup_home_manage_crud_add_file"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:textOn="@string/popup_home_manage_crud_add_file_file_on"
        android:textOff="@string/popup_home_manage_crud_add_file_file_off" />

    <Spinner
        android:id="@+id/popup_home_manage_crud_spn_template_list"
        android:layout_width="300dp"
        android:layout_height="match_parent"/>

    <Button
        android:id="@+id/popup_home_manage_crud_btn_save"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:textOff="@string/popup_home_manage_crud_btn_save" />

</LinearLayout>