<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_manage"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/popup_manage_btn_parent_open"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/popup_manage_btn_parent_open"/>

    <Button
        android:id="@+id/popup_manage_btn_child_open"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/popup_manage_btn_child_open"/>

    <Button
        android:id="@+id/popup_manage_btn_template_open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_manage_btn_template_open"/>

    <Button
        android:id="@+id/popup_manage_btn_customer_open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_manage_btn_customer_open"/>

</LinearLayout>