<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/activity_manage_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <Spinner
        android:id="@+id/activity_manage_spn_parent_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/activity_manage_spn_child_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/activity_manage_btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_manage_btn_create" />

    <Button
        android:id="@+id/activity_manage_btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_manage_btn_update" />

    <Button
        android:id="@+id/activity_manage_btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_manage_btn_delete" />

</LinearLayout>