<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settemplate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activity_settemplate_txt_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/activity_settemplate_txt_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center" />

    <ToggleButton
        android:id="@+id/activity_settemplate_togbtn_add_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/activity_settemplate_togbtn_add_text_on"
        android:textOff="@string/activity_settemplate_togbtn_add_text_on" />

    <ToggleButton
        android:id="@+id/activity_settemplate_togbtn_add_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/activity_settemplate_togbtn_add_photo_on"
        android:textOff="@string/activity_settemplate_togbtn_add_photo_off" />

    <ToggleButton
        android:id="@+id/activity_settemplate_togbtn_add_current_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/activity_settemplate_togbtn_add_photo_on"
        android:textOff="@string/activity_settemplate_togbtn_add_photo_off" />

    <ToggleButton
        android:id="@+id/activity_settemplate_togbtn_add_signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/activity_settemplate_togbtn_add_photo_on"
        android:textOff="@string/activity_settemplate_togbtn_add_photo_off" />

    <ToggleButton
        android:id="@+id/activity_settemplate_togbtn_add_voice_recording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/activity_settemplate_togbtn_add_photo_on"
        android:textOff="@string/activity_settemplate_togbtn_add_photo_off" />

    <Button
        android:id="@+id/activity_settemplate_btn_job_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_settemplate_btn_job_create" />

</LinearLayout>